# hermes-codex-ops

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: approval-policies.example.json  context-routing.example.json  control-state.example.json  repos.example.json  telegram_persona.md
docs/: CONTEXT_ROUTING.md  DATA_CONTINUITY.md  DEPLOYMENT.md  GITHUB_WORKFLOW.md  HERMES_CAPABILITY_AUDIT.md  HOSTINGER_RECOVERY.md  IMPLEMENTATION_PLAN.md  LOGGING.md  MEMORY_RULES.md  OPEN_WEBUI.md  OPERATOR_CONTROLS.md  QUEUE_RULES.md  SECRETS.md  SYSTEM_OVERVIEW.md  TELEGRAM_COMMANDS.md  VPS_BRINGUP.md  WATCHERS.md  WORKER.md
system/: __init__.py
system/docker/: Dockerfile  docker-compose.yml  entrypoint.sh
system/hermes/: __init__.py  capabilities.py  coordinator.py  main.py  openai_adapter.py
system/scripts/: bootstrap_ubuntu.sh  control.py  export_telegram_records.py  healthcheck.py  hermes_context.py  init_platform.py  install_systemd_units.sh  live_smoke.sh  open_webui.sh  sync_codex_jobs.py  sync_repo_cache.py
system/services/: __init__.py  ai_backend.py  audit_log.py  codex_job_sync.py  config.py  context_router.py  control_state.py  github.py  (+6 more)
tests/: test_ai_backend.py  test_capabilities.py  test_codex_job_sync.py  test_config.py  test_context_router.py  test_control_state.py  test_docker_runtime.py  test_export_telegram_records.py  test_healthcheck_import.py  test_memory_compressor.py  test_openai_adapter.py  test_queue_memory.py  test_telegram_conversation.py  test_telegram_notifier.py  test_telegram_task_intake.py  test_worker_execution.py
(+11 files in other folders)
